--- a/templates/course/courseone.html
+++ b/templates/course/courseone.html
@@ -7,6 +7,6 @@
     <title>Django Template Languages</title>
 </head>
 <body>
-    <h3> {{nm}} </h3>
+    <h3>Course Name :  {{nm}}, Duration: {{du}} and Total Seats: {{st}} </h3>
 </body>
 </html>
