--- a/templates/course/courseone.html
+++ b/templates/course/courseone.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body{
+            background-color:black;
+            color: seashell;
+        }
+    </style>
     <title>Django Template Languages</title>
 </head>
 <body>
-    <h3>Course Name :  {{nm}}, Duration: {{du}} and Total Seats: {{st}} </h3>
+    <h3>{{ nm|capfirst }}</h3>
+    <!-- <h3>Course Name :  {{nm}}, Duration: {{du}} and Total Seats: {{st}} </h3> -->
 </body>
 </html>
