--- a/templates/course/courseone.html
+++ b/templates/course/courseone.html
@@ -13,7 +13,7 @@
     <title>Django Template Languages</title>
 </head>
 <body>
-    <h3>{{ nm|capfirst }}</h3>
+    <h3>{{ nm|default:'Nothing' }}</h3>
     <!-- <h3>Course Name :  {{nm}}, Duration: {{du}} and Total Seats: {{st}} </h3> -->
 </body>
 </html>
