--- a/templates/course/courseone.html
+++ b/templates/course/courseone.html
@@ -13,10 +13,8 @@
     <title>Django Template Languages</title>
 </head>
 <body>
-    <h3>{{dt|date:"D d M Y" }}</h3>
-    <h3>{{dt|time:"H:i" }}</h3>
-    <h3>{{dt|time:"TIME_FORMAT" }}</h3>
-    <h3>{{dt|date:"SHORT_DATE_FORMAT" }}</h3>
-    <!-- <h3>Course Name :  {{nm}}, Duration: {{du}} and Total Seats: {{st}} </h3> -->
+  <h3>{{p1|floatformat}}</h3> 
+  <h3>{{p2|floatformat}}</h3> 
+  <h3>{{p3|floatformat}}</h3> 
 </body>
 </html>
