--- a/templates/course/courseone.html
+++ b/templates/course/courseone.html
@@ -13,8 +13,8 @@
     <title>Django Template Languages</title>
 </head>
 <body>
-  <h3>{{p1|floatformat}}</h3> 
-  <h3>{{p2|floatformat}}</h3> 
-  <h3>{{p3|floatformat}}</h3> 
+  <h3>{{p1|floatformat:0}}</h3> 
+  <h3>{{p2|floatformat:0}}</h3> 
+  <h3>{{p3|floatformat:0}}</h3> 
 </body>
 </html>
